--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="logo">My Apps</div>
         <ul class="nav-links">
             <li><a href="weatherApp.html">Weather App</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
             <li><a href="toDoList.html">To Do List</a></li>
             <li><a href="slideShow.html">Gallery</a></li>
         </ul>
